reactexample/docker/minikube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: tomcat-c
        # image: docker.io/library/docker-server:latest
        image: docker0now/docker_server:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: libs-volume
          mountPath: /tmp/libs
      volumes:
      - name: libs-volume
        hostPath:
          path: /mnt/libs
          type: DirectoryOrCreate
