reactexample/docker/minikube/pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: your-nodejs-app-image
        volumeMounts:
        - name: node-modules
          mountPath: /app/node_modules
      volumes:
      - name: node-modules
        persistentVolumeClaim:
          claimName: node-modules-pvc
