reactexample/docker/minikube/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: LoadBalancer
  selector:
    app: database-pod
  ports:
    - port: 3306
      # nodePort: 31472
      targetPort: 3306
  # externalIPs:
  #   - 172.30.1.44
