reactexample/docker/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /backend/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /(mydb.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: database
                port:
                  number: 3306
          - path: /(list)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 3000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 3000
